	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm
	* support for automatically start torrents when they receive an
	  incoming connection
	* added more detailed instrumentation of the disk I/O thread

0.15.6 release

	* fixed crash in udp trackers when using SOCKS5 proxy
	* fixed reconnect delay when leaving upload only mode
	* fixed default values being set incorrectly in add_torrent_params through add_magnet_uri in python bindings
	* implemented unaligned write (for unbuffered I/O)
	* fixed broadcast_lsd option
	* fixed udp-socket race condition when using a proxy
	* end-game mode optimizations
	* fixed bug in udp_socket causing it to issue two simultaneous async. read operations
	* fixed mingw build
	* fixed minor bug in metadata block requester (for magnet links)
	* fixed race condition in iconv string converter
	* fixed error handling in torrent_info constructor
	* fixed bug in torrent_info::remap_files
	* fix python binding for wait_for_alert
	* only apply privileged port filter to DHT-only peers

0.15.5 release

	* support DHT extension to report external IPs
	* fixed rare crash in http_connection's error handling
	* avoid connecting to peers listening on ports < 1024
	* optimized piece picking to not cause busy loops in some end-game modes
	* fixed python bindings for tcp::endpoint
	* fixed edge case of pad file support
	* limit number of torrents tracked by DHT
	* fixed bug when allow_multiple_connections_per_ip was enabled
	* potential WOW64 fix for unbuffered I/O (windows)
	* expose set_alert_queue_size_limit to python binding
	* support dht nodes in magnet links
	* support 100 Continue HTTP responses
	* changed default choker behavior to use 8 unchoke slots (instead of being rate based)
	* fixed error reporting issue in disk I/O thread
	* fixed file allocation issues on linux